--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ homepage = "https://github.com/zhuravlevma/wasm-rust"
 
 [dependencies]
 wasm-bindgen = "0.2"
+console_error_panic_hook = "0.1.7"
+web-sys = { version = "0.3.56", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
+wee_alloc = "0.4.5"
