--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-rust"
+name = "wasm-trunk-vanilla"
 version = "0.1.0"
 edition = "2021"
 authors = ["Zhuravlev Maksim <monge.gaspard.1746@gmail.com>"]
@@ -7,8 +7,8 @@ description = "It's a simple library to course OTUS Rust developer"
 license = "MIT OR Apache-2.0"
 rust-version = "1.56"
 readme = "README.md"
-repository = "https://github.com/zhuravlevma/wasm-rust"
-homepage = "https://github.com/zhuravlevma/wasm-rust"
+repository = "https://github.com/zhuravlevma/wasm-trunk-vanilla"
+homepage = "https://github.com/zhuravlevma/wasm-trunk-vanilla"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
